# planepilot

./: .gitignore  Cargo.toml  LICENSE  README.md  constants.json
.devcontainer/: devcontainer.json
dataserver/: .env  Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal
dataserver/migrations/: 20240403194412_data.sql  20240404165432_channels.sql
dataserver/src/: lib.rs  main.rs
dataserver/src/controller/: mod.rs
dataserver/src/models/: channel.rs  data.rs  mod.rs
dataserver/src/sse/: sse.rs
dataserver/src/utils/: config.rs  db.rs  log.rs
planeconnector/: Cargo.toml
planeconnector/src/: httpserver.rs  lib.rs  main.rs  types.rs  utils.rs  xplanedatamap.rs  xplaneudp.rs
planepilot/: Cargo.toml
planepilot/src/: httpserver.rs  lib.rs  main.rs  types.rs  utils.rs
pp-autopilot/: Cargo.toml
pp-autopilot/src/: httpserver.rs  main.rs  utils.rs
pp-dataserver/: Cargo.toml
pp-dataserver/migrations/: 20240403194412_data.sql
pp-dataserver/src/: main.rs
pp-dataserver/src/utils/: config.rs  mod.rs  trace.rs
pp-planeconnector/: Cargo.toml
pp-planeconnector/src/: httpserver.rs  main.rs  utils.rs  xplanedatamap.rs
pp_autopilot/: Cargo.toml
pp_autopilot/src/: horizontalguidance.rs  httpserver.rs  lib.rs  main.rs  types.rs  utils.rs  verticalguidance.rs
pp_dataserver/: Cargo.toml
pp_dataserver/src/: lib.rs  main.rs
pp_dataserver/src/controller/: mod.rs
pp_dataserver/src/models/: data.rs  mod.rs
pp_dataserver/src/sse/: sse.rs
pp_dataserver/src/utils/: config.rs  db.rs  trace.rs
pp_planeconnector/: Cargo.toml
pp_planeconnector/src/: httpserver.rs  lib.rs  main.rs  types.rs  utils.rs  xplaneudp.rs
pp_ui/: index.html  main.js  styles.css
src/: lib.rs  main.rs  utils.rs
src/xplane/: mod.rs  xplane.rs  xplanedatamap.rs
ui/: package-lock.json  package.json
ui/app/: datatypes.tsx  hooks.tsx  layout.tsx  page.tsx  root-reducers.tsx  root-sagas.tsx  sribbles  store.js  store.tsx
ui/app/features/chartData/: ChannelChart.tsx  actions.tsx  reducers.tsx  sagas.tsx  types.tsx
ui/planepilot-ui/: package-lock.json  package.json
