[package]
name = "planepilot"
version = "0.2.0"
edition = "2021"
authors = ["Scott Brugmans <scott.brugmans@gmail.com>"]
repository = "https://github.com/scott223/planepilot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pp_autopilot = { path = "pp_autopilot" }
pp_dataserver = { path = "pp_dataserver" }
pp_planeconnector = { path = "pp_planeconnector" }

dotenv = "0.15.0"
tokio = { version = "1.39.1", features = ["full"] }
tokio-util = "0.7.11"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

crossterm = {version = "0.27", features = ['events', 'event-stream'] }
futures = "0.3"
futures-timer = "3.0.3"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = false
opt-level=3

[profile.dev]
strip = false
opt-level=0
debug=true

[profile.dev.package."*"]
opt-level=3
debug=true
