[package]
name = "dataserver"
version = "0.2.0"
edition = "2021"
authors = ["Scott Brugmans <scott.brugmans@gmail.com>"]
repository = "https://github.com/scott223/planepilot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = { version = "0.4.37", features = ["serde"] }

axum = "0.7.5"
axum-extra = { version="0.9.3", features = ["typed-header"] }


tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", default-features = false, features = [
    "sync",
] }
futures = "0.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

tower-http = { version = "0.5.2", features = ["trace"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = false        # Strip symbols from binary*
debug = false
opt-level=3

[profile.dev]
strip = false
opt-level=0
debug=true

[profile.dev.package."*"]
opt-level=3
debug=true