[package]
name = "pp_dataserver"
version = "0.3.0"
edition = "2021"
authors = ["Scott Brugmans <scott.brugmans@gmail.com>"]
repository = "https://github.com/scott223/planepilot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { workspace = true}
tokio = { workspace = true }
tokio-util = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

futures = { workspace = true }
futures-timer = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }

itertools = { workspace = true }

tokio-stream = { version = "0.1.15", default-features = false, features = [
    "sync",
] }

sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}